--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   },
