--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.2",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-google-oauth2": "^0.2.0",
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
