--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,7 @@ jobs:
           port: ${{ secrets.REMOTE_SSH_PORT }}
           script: |
             cd /home/ubuntu/HH99FinalProject_BE
-            sudo pm2 stop app.js
             sudo git pull
             sudo npm update
             sudo npm install
-            sudo pm2 start app.js
+            sudo pm2 reload all
