--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
+    "request": "^2.88.2",
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
