--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
